--- a/AutoRest/Generators/Java/Java/Templates/EnumTemplate.cshtml
+++ b/AutoRest/Generators/Java/Java/Templates/EnumTemplate.cshtml
@@ -31,7 +31,7 @@ public enum @(Model.Name) {
     private String value;
     @EmptyLine
 
-    private @(Model.Name)(String value) {
+    @(Model.Name)(String value) {
         this.value = value;
     }
     @EmptyLine
