--- a/AutoRest/Generators/NodeJS/NodeJS/Templates/MethodTemplate.cshtml
+++ b/AutoRest/Generators/NodeJS/NodeJS/Templates/MethodTemplate.cshtml
@@ -69,8 +69,7 @@
   </text>
   }
   }
-
-  @Model.BuildInputMappings()
+  @(Model.BuildInputMappings())
   @EmptyLine
   // Construct URL
   @if (Model.IsAbsoluteUrl)
@@ -128,15 +127,18 @@
     if (@(Model.RequestBody.Name) !== null && @(Model.RequestBody.Name) !== undefined) {
       @(Model.ConstructRequestBodyMapper)
       requestModel = msRest.serialize(requestModelMapper, @(Model.RequestBody.Name), '@(Model.RequestBody.Name)', client);
-      requestContent = JSON.stringify(requestModel);
     }
+    requestContent = JSON.stringify(requestModel);
   } catch (error) {
-    var serializationError = new Error(util.format('Error "%s" occurred in serializing the payload - "%s"', error, util.inspect(requestModel, {depth: null})));
+    var serializationError = new Error(util.format('Error "%s" occurred in serializing the ' + 
+        'payload - "%s"', error.message, util.inspect(@(Model.RequestBody.Name), {depth: null})));
     return callback(serializationError);
   }
 
   httpRequest.body = requestContent;
-  httpRequest.headers['Content-Length'] = Buffer.isBuffer(requestContent) ? requestContent.length : Buffer.byteLength(requestContent, 'UTF8');
+  httpRequest.headers['Content-Length'] = Buffer.isBuffer(requestContent) ? 
+                                                    requestContent.length : 
+                                  Buffer.byteLength(requestContent, 'UTF8');
   </text>
       }
   }
