--- a/AutoRest/Generators/Java/Azure.Java/Templates/AzureMethodGroupInterfaceTemplate.cshtml
+++ b/AutoRest/Generators/Java/Azure.Java/Templates/AzureMethodGroupInterfaceTemplate.cshtml
@@ -32,7 +32,7 @@ public interface @Model.MethodGroupType {
     {
         if (method.HttpMethod == Microsoft.Rest.Generator.ClientModel.HttpMethod.Delete)
         {
-    @:    @@HTTP(path = "@(method.Url)", method = "DELETE", hasBody = true)
+    @:    @@HTTP(path = "@(method.Url.TrimStart('/'))", method = "DELETE", hasBody = true)
     }
         else if (method.IsPagingNextOperation)
         {
@@ -40,7 +40,7 @@ public interface @Model.MethodGroupType {
     }
         else
         {
-    @:    @@@(method.HttpMethod.ToString().ToUpper())("@(method.Url)")
+    @:    @@@(method.HttpMethod.ToString().ToUpper())("@(method.Url.TrimStart('/'))")
     }
     @:    Call<@method.CallType> @(method.Name)(@method.MethodParameterApiDeclaration);
     @EmptyLine
