--- a/AutoRest/Generators/NodeJS/NodeJS/Templates/ServiceClientTemplate.cshtml
+++ b/AutoRest/Generators/NodeJS/NodeJS/Templates/ServiceClientTemplate.cshtml
@@ -90,6 +90,7 @@ function @(Model.Name)(@(Model.RequiredConstructorParameters), options) {
   {
   @:this.models = models;
   }
+  msRest.addSerializationMixin(this);
 }
 @EmptyLine
 util.inherits(@Model.Name, ServiceClient);
