--- a/AutoRest/Generators/Java/Azure.Java/Templates/AzureServiceClientInterfaceTemplate.cshtml
+++ b/AutoRest/Generators/Java/Azure.Java/Templates/AzureServiceClientInterfaceTemplate.cshtml
@@ -87,16 +87,17 @@ if(!property.IsReadOnly)
     interface @Model.ServiceClientServiceType {
     @foreach (AzureMethodTemplateModel method in Model.MethodTemplateModels)
     {
-        if (method.HttpMethod == Microsoft.Rest.Generator.ClientModel.HttpMethod.Delete)
-        {
+    @:    @@Headers("Content-Type: @method.RequestContentType")
+    if (method.HttpMethod == Microsoft.Rest.Generator.ClientModel.HttpMethod.Delete)
+    {
     @:    @@HTTP(path = "@(method.Url.TrimStart('/'))", method = "DELETE", hasBody = true)
     }
-        else if (method.IsPagingNextOperation)
-        {
+    else if (method.IsPagingNextOperation)
+    {
     @:    @@GET
     }
-        else
-        {
+    else
+    {
     @:    @@@(method.HttpMethod.ToString().ToUpper())("@(method.Url.TrimStart('/'))")
     }
     @:    Call<@method.CallType> @(method.Name)(@method.MethodParameterApiDeclaration);
