--- a/AutoRest/Generators/Java/Java/Templates/MethodGroupInterfaceTemplate.cshtml
+++ b/AutoRest/Generators/Java/Java/Templates/MethodGroupInterfaceTemplate.cshtml
@@ -30,6 +30,7 @@ public interface @Model.MethodGroupType {
     interface @Model.MethodGroupServiceType {
     @foreach (var method in Model.MethodTemplateModels)
     {
+    @:    @@Headers("Content-Type: @method.RequestContentType")
     if (method.HttpMethod == Microsoft.Rest.Generator.ClientModel.HttpMethod.Delete)
     {
     @:    @@HTTP(path = "@(method.Url.TrimStart('/'))", method = "DELETE", hasBody = true)
