Moving ClientRequestId to client

--- a/AutoRest/Generators/CSharp/Azure.CSharp/Templates/AzureServiceClientTemplate.cshtml
+++ b/AutoRest/Generators/CSharp/Azure.CSharp/Templates/AzureServiceClientTemplate.cshtml
@@ -50,6 +50,8 @@ namespace @Settings.Namespace
             @:this.@(property.Name) = @(property.DefaultValue);
         }
 
+            this.ClientRequestId = Guid.NewGuid().ToString();
+
             SerializationSettings = new JsonSerializerSettings
             {
                 Formatting = Formatting.Indented,
